--- a/TeamA7ProjectF2019.project
+++ b/TeamA7ProjectF2019.project
@@ -37,6 +37,14 @@
             "registrationScreen", 
             "registrationScreen.json"
           ]
+        }, 
+        {
+          "!type": "External", 
+          "file": [
+            "forms", 
+            "startGameScreen", 
+            "startGameScreen.json"
+          ]
         }
       ], 
       "configxml": null, 
@@ -51,7 +59,7 @@
       "eslintRules": null, 
       "expanded_pmp": null, 
       "extraheaders": null, 
-      "firstform": "registrationScreen", 
+      "firstform": "startGameScreen", 
       "fontFamily": "system", 
       "homescreenTitle": "", 
       "icon": "nsb/images/192.png", 
