In class updates

--- a/TeamA7ProjectF2019.project
+++ b/TeamA7ProjectF2019.project
@@ -45,6 +45,14 @@
             "startGameScreen", 
             "startGameScreen.json"
           ]
+        }, 
+        {
+          "!type": "External", 
+          "file": [
+            "forms", 
+            "joinGameScreen", 
+            "joinGameScreen.json"
+          ]
         }
       ], 
       "configxml": null, 
